--- a/index.html
+++ b/index.html
@@ -12,11 +12,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="js/main.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+    <div class="calc mt-5">
+        <form name="form">
+            <input class="calc-display">
+        </form>
+        <table>
+            <tr>
+                <td><input type="button" value="ac" onclick="c()"></td>
+                <td><input type="button" value="/" onclick="insrt('/')"></td>
+                <td><input type="button" value="c" onclick="del()"></td>
+                <td><input type="button" value="x" onclick="insrt('*')"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="7" onclick="insrt(7)"></td>
+                <td><input type="button" value="8" onclick="insrt(8)"></td>
+                <td><input type="button" value="9" onclick="insrt(9)"></td>
+                <td><input type="button" value="-" onclick="insrt('-')"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="4" onclick="insrt(4)"></td>
+                <td><input type="button" value="5" onclick="insrt(5)"></td>
+                <td><input type="button" value="6" onclick="insrt(6)"></td>
+                <td><input type="button" value="+" onclick="insrt('+')"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="1" onclick="insrt(1)"></td>
+                <td><input type="button" value="2" onclick="insrt(2)"></td>
+                <td><input type="button" value="3" onclick="insrt(3)"></td>
+                <td rowspan=2><input type="button" value="=" onclick="eql()" style="height: 158px; background: orange;"></td>
+            </tr>
+            <tr>
+                <td colspan="2"><input type="button" value="0" onclick="insrt(0)" style="width: 158px;"></td>
+                <td><input type="button" value="." onclick="insrt('.')"></td>
+            </tr>
+        </table>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
