--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <td><input type="button" value="ac" onclick="c()"></td>
                 <td><input type="button" value="/" onclick="insrt('/')"></td>
                 <td><input type="button" value="c" onclick="del()"></td>
-                <td><input type="button" value="x" onclick="insrt('*')"></td>
+                <td><input type="button" value="×" onclick="insrt('*')"></td>
             </tr>
             <tr>
                 <td><input type="button" value="7" onclick="insrt(7)"></td>
