input direaction changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="calc mt-5">
         <form name="form">
-            <input class="calc-display">
+            <input class="calc-display text-right">
         </form>
         <table>
             <tr>
