--- a/calc.html
+++ b/calc.html
@@ -13,11 +13,10 @@
         <script>
             $(document).ready(function(){
                 $('#btnok').click(function(){
-                    alert('hi');
-                    // var a = $('#txtfirst').val();
-                    // var b = $('#txtsecond').val();
-                    // var c = parseInt(a) + parseInt(b);
-                    // $('#txtresult').val(c);
+                    var a = $('#txtfirst').val();
+                    var b = $('#txtsecond').val();
+                    var c = parseInt(a) + parseInt(b);
+                    $('#txtresult').val(c);
                 });
             })
         </script>
