--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             });
             $('.btn-success').click(function(){
                 var a = $('.btn-num').val();
-                var b = $('.btn-act').val();
+                var b = $('.btn-num').val();
                 var c = parseInt(a) + parseInt(b);
                 
                 $('input').val(c);
