--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
                 </div>
                 <div class="m-container col-12 d-flex flex-row flex-wrap bg-light p-0">
                     <div class="col-2">
-                        <button class="text-secondar btn-light bg-light">MC</button>
+                        <button class="text-secondar btn-light numberr bg-light">MC</button>
                     </div>
                     <div class="col-2">
-                        <button class="text-secondar  btn-light bg-light">MR</button>
+                        <button class="text-secondar  btn-light numberr bg-light">MR</button>
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light">M+</button>
+                        <button class="text btn-light numberr">M+</button>
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light">M-</button>
+                        <button class="text btn-light numberr">M-</button>
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light">MS</button>
+                        <button class="text btn-light numberr">MS</button>
                     </div>
                     <div class="col-2">
-                        <button class="text-secondar btn-light">M</button>
+                        <button class="text-secondar btn-light numberr">M</button>
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="%">%</button>
+                        <button class="text btn-act btn-light numberr" data-val="%">%</button>
                     </div>
                     <div class="col-3 bdr">
                         <button class="text btn-act btn-warning ">CE</button>
@@ -77,73 +77,73 @@
                         <button class="text btn-act btn-warning">C</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="×">×</button>
+                        <button class="text btn-act btn-light numberr" data-val="×">×</button>
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="1/×">1/×</button>
+                        <button class="text btn-act btn-light numberr" data-val="1/×">1/×</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="x^2">x^2</button>
+                        <button class="text btn-act btn-light numberr" data-val="x^2">x^2</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="2√x">2√x</button>
+                        <button class="text btn-act btn-light numberr" data-val="2√x">2√x</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val=" ÷ ">÷</button>
+                        <button class="text btn-act btn-light numberr" data-val=" ÷ ">÷</button>
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-num" data-val="7">7</button>
+                        <button class="bg-white button btn-light numberr btn-num" data-val="7">7</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-num" data-val="8">8</button>
+                        <button class="bg-white button btn-light numberr btn-num" data-val="8">8</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-num" data-val="9">9</button>
+                        <button class="bg-white button btn-light numberr btn-num" data-val="9">9</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-act" data-val=" × ">×</button>
+                        <button class="bg-white button btn-light numberr btn-act" data-val=" × ">×</button>
                     </div>
                     <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="4">4</button>
+                            <button class="bg-white button btn-light numberr btn-num" data-val="4">4</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="5">5</button>
+                            <button class="bg-white button btn-light numberr btn-num" data-val="5">5</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="6">6</button>
+                            <button class="bg-white button btn-light numberr btn-num" data-val="6">6</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val=" - ">-</button>
-                        </div>
-                    </div>
-                    <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="1">1</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="2">2</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="3">3</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val=" + ">+</button>
+                            <button class="bg-white button btn-light numberr btn-act" data-val=" - ">-</button>
                         </div>
                     </div>
                     <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val="+/_">+/_</button>
+                            <button class="bg-white button btn-light numberr btn-num" data-val="1">1</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="0">0</button>
+                            <button class="bg-white button btn-light numberr btn-num" data-val="2">2</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val=" . ">.</button>
+                            <button class="bg-white button btn-light numberr btn-num" data-val="3">3</button>
+                        </div>
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light numberr btn-act" data-val=" + ">+</button>
+                        </div>
+                    </div>
+                    <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light numberr btn-act" data-val="+/_">+/_</button>
+                        </div>
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light numberr btn-num" data-val="0">0</button>
+                        </div>
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light numberr btn-act" data-val=" . ">.</button>
                         </div>
                         <div class="col-3 bdr">
                             <button style="background: #78addf;" class="text btn-act btn-success">=</button>
@@ -155,10 +155,11 @@
     </section>
     <script>
         $(document).ready(function () {
-            $('.btn-light').click(function () {
-                var current_val = $('input').val();
-                var val = $(this).data('val');
-                $('input').val(current_val + val);
+            $('.numberr').click(function () {
+                var on_display_val = $('.calc-display').val();
+                debugger;
+                var current_val = $(this).data('val');
+                $('.calc-display').val(on_display_val + current_val);
             });
             $('.btn-warning').click(function () {
                 $('input').val(' ');
