--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
                     </div>
                 </div>
                 <div class="calc col-lg-12 p-0 ">
-                    <input type="text" class="form-control calc-display text-right bg-light border-0 w-100">
+                    <input type="text" class="form-control text-right bg-light border-0 w-100">
                 </div>
                 <div class="m-container col-12 d-flex flex-row flex-wrap bg-light p-0">
                     <div class="col-2">
-                        <button class="text-secondar btn-light numberr bg-light">MC</button>
+                        <button class="text-secondar btn-light bg-light">MC</button>
                     </div>
                     <div class="col-2">
-                        <button class="text-secondar  btn-light numberr bg-light">MR</button>
+                        <button class="text-secondar  btn-light bg-light">MR</button>
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light numberr">M+</button>
+                        <button class="text btn-light">M+</button>
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light numberr">M-</button>
+                        <button class="text btn-light">M-</button>
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light numberr">MS</button>
+                        <button class="text btn-light">MS</button>
                     </div>
                     <div class="col-2">
-                        <button class="text-secondar btn-light numberr">M</button>
+                        <button class="text-secondar btn-light">M</button>
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light numberr" data-val="%">%</button>
+                        <button class="text btn-act btn-light" data-val="%">%</button>
                     </div>
                     <div class="col-3 bdr">
                         <button class="text btn-act btn-warning ">CE</button>
@@ -77,73 +77,73 @@
                         <button class="text btn-act btn-warning">C</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light numberr" ><i class="fa fa-times pl-3" aria-hidden="true"></i></button>
+                        <button class="text btn-act btn-light" data-val="×">×</button>
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light numberr" data-val="1/×">1/×</button>
+                        <button class="text btn-act btn-light" data-val="1/×">1/×</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light numberr" data-val="x^2">x^2</button>
+                        <button class="text btn-act btn-light" data-val="x^2">x^2</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light numberr" data-val="2√x">2√x</button>
+                        <button class="text btn-act btn-light" data-val="2√x">2√x</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light numberr" data-val=" ÷ ">÷</button>
+                        <button class="text btn-act btn-light" data-val=" ÷ ">÷</button>
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light numberr btn-num" data-val="7">7</button>
+                        <button class="bg-white button btn-light btn-num" data-val="7">7</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light numberr btn-num" data-val="8">8</button>
+                        <button class="bg-white button btn-light btn-num" data-val="8">8</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light numberr btn-num" data-val="9">9</button>
+                        <button class="bg-white button btn-light btn-num" data-val="9">9</button>
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light numberr btn-act" data-val="×">×</button>
+                        <button class="bg-white button btn-light btn-act" data-val=" × ">×</button>
                     </div>
                     <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="4">4</button>
+                            <button class="bg-white button btn-light btn-num" data-val="4">4</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="5">5</button>
+                            <button class="bg-white button btn-light btn-num" data-val="5">5</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="6">6</button>
+                            <button class="bg-white button btn-light btn-num" data-val="6">6</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-act" data-val=" - ">-</button>
-                        </div>
-                    </div>
-                    <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="1">1</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="2">2</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="3">3</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-act" data-val=" + ">+</button>
+                            <button class="bg-white button btn-light btn-act" data-val=" - ">-</button>
                         </div>
                     </div>
                     <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-act" data-val="+/_">+/_</button>
+                            <button class="bg-white button btn-light btn-num" data-val="1">1</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-num" data-val="0">0</button>
+                            <button class="bg-white button btn-light btn-num" data-val="2">2</button>
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light numberr btn-act" data-val=" . ">.</button>
+                            <button class="bg-white button btn-light btn-num" data-val="3">3</button>
+                        </div>
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light btn-act" data-val=" + ">+</button>
+                        </div>
+                    </div>
+                    <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light btn-act" data-val="+/_">+/_</button>
+                        </div>
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light btn-num" data-val="0">0</button>
+                        </div>
+                        <div class="col-3 bdr">
+                            <button class="bg-white button btn-light btn-act" data-val=" . ">.</button>
                         </div>
                         <div class="col-3 bdr">
                             <button style="background: #78addf;" class="text btn-act btn-success">=</button>
@@ -155,17 +155,17 @@
     </section>
     <script>
         $(document).ready(function () {
-            $('.numberr').click(function () {
-                var on_display_val = $('.calc-display').val();
-                var current_val = $(this).data('val');
-                $('.calc-display').val(on_display_val + current_val);
-
+            $('.btn-light').click(function () {
+                var current_val = $('input').val();
+                var val = $(this).data('val');
+                $('input').val(current_val + val);
             });
             $('.btn-warning').click(function () {
-                $('.calc-display').val(' ');
+                $('input').val('');
             });
             $('.btn-success').click(function () {
-                var val = $('.calc-display').val().split(" ");
+
+                var val = $('input').val().split(" ");
                 var result = 'ERROR';
                 if (val[1] == '÷') {
                     result = parseInt(val[0]) / parseInt(val[2]);
@@ -179,9 +179,10 @@
                 if (val[1] == '+') {
                     result = parseInt(val[0]) + parseInt(val[2]);
                 }
-                $('.calc-display').val(result);
-                $('.calc-display').addClass('needclear');
-            });
+                $('input').val(result);
+                $('input').addClass('needclear');
+
+            })
         });
     </script>
 </body>
