--- a/index.html
+++ b/index.html
@@ -44,109 +44,109 @@
                     </div>
                 </div>
                 <div class="calc col-lg-12 p-0 ">
-                    <input type="text" class="form-control text-right bg-light border-0 w-100">
+                    <input type="text" class="form-control text-right bg-light border-0 w-100" id="calc-display">
                 </div>
                 <div class="m-container col-12 d-flex flex-row flex-wrap bg-light p-0">
                     <div class="col-2">
-                        <button class="text-secondar btn-light bg-light">MC</button>
+                        <input class="text-secondar btn-light bg-light" value="MC">
                     </div>
                     <div class="col-2">
-                        <button class="text-secondar  btn-light bg-light">MR</button>
+                        <input class="text-secondar  btn-light bg-light" value="MR">
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light">M+</button>
+                        <input class="text btn-light" value="M+">
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light">M-</button>
+                        <input class="text btn-light" value="M-">
                     </div>
                     <div class="col-2">
-                        <button class="text btn-light">MS</button>
+                        <input class="text btn-light" value="MS">
                     </div>
                     <div class="col-2">
-                        <button class="text-secondar btn-light">M</button>
+                        <input class="text-secondar btn-light" value="M">
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="%">%</button>
+                        <input class="text btn-act btn-light" value="%">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-warning ">CE</button>
+                        <input class="text btn-act btn-warning " value="CE">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-warning">C</button>
+                        <input class="text btn-act btn-warning " value="C">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="×">×</button>
+                        <input class="text btn-act btn-light" value="×">
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="1/×">1/×</button>
+                        <input class="text btn-act btn-light" value="1/×">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="x^2">x^2</button>
+                        <input class="text btn-act btn-light" value="x^2">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val="2√x">2√x</button>
+                        <input class="text btn-act btn-light" value="2√x">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="text btn-act btn-light" data-val=" ÷ ">÷</button>
+                        <input class="text btn-act btn-light" value=" / ">
                     </div>
                 </div>
                 <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-num" data-val="7">7</button>
+                        <input class="bg-white input btn-light btn-num" value="7">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-num" data-val="8">8</button>
+                        <input class="bg-white input btn-light btn-num" value="8">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-num" data-val="9">9</button>
+                        <input class="bg-white input btn-light btn-num" value="9">
                     </div>
                     <div class="col-3 bdr">
-                        <button class="bg-white button btn-light btn-act" data-val=" × ">×</button>
+                        <input class="bg-white input btn-light btn-act" value=" * ">
                     </div>
                     <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="4">4</button>
+                            <input class="bg-white input btn-light btn-num" value="4">
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="5">5</button>
+                            <input class="bg-white input btn-light btn-num" value="5">
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="6">6</button>
+                            <input class="bg-white input btn-light btn-num" value="6">
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val=" - ">-</button>
-                        </div>
-                    </div>
-                    <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="1">1</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="2">2</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="3">3</button>
-                        </div>
-                        <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val=" + ">+</button>
+                            <input class="bg-white input btn-light btn-act" value=" - ">
                         </div>
                     </div>
                     <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val="+/_">+/_</button>
+                            <input class="bg-white input btn-light btn-num" value="1">
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-num" data-val="0">0</button>
+                            <input class="bg-white input btn-light btn-num" value="2">
                         </div>
                         <div class="col-3 bdr">
-                            <button class="bg-white button btn-light btn-act" data-val=" . ">.</button>
+                            <input class="bg-white input btn-light btn-num" value="3">
                         </div>
                         <div class="col-3 bdr">
-                            <button style="background: #78addf;" class="text btn-act btn-success">=</button>
+                            <input class="bg-white input btn-light btn-act" value=" + ">
+                        </div>
+                    </div>
+                    <div class="icon-box col-12 d-flex flex-row flex-wrap bg-light justify-content-between p-0">
+                        <div class="col-3 bdr">
+                            <input class="bg-white input btn-light btn-act" value="+/_">
+                        </div>
+                        <div class="col-3 bdr">
+                            <input class="bg-white input btn-light btn-num" value="0">
+                        </div>
+                        <div class="col-3 bdr">
+                            <input class="bg-white input btn-light btn-act" value=" . ">
+                        </div>
+                        <div class="col-3 bdr">
+                            <input style="background: #78addf; color: white;" class="text btn-act " id="btn-success" value="=">
                         </div>
                     </div>
                 </div>
@@ -156,33 +156,14 @@
     <script>
         $(document).ready(function () {
             $('.btn-light').click(function () {
-                var current_val = $('input').val();
-                var val = $(this).data('val');
-                $('input').val(current_val + val);
+                $('#calc-display').val($('#calc-display').val() + $(this).val());
             });
             $('.btn-warning').click(function () {
-                $('input').val('');
+                $('#calc-display').val(' ');
             });
-            $('.btn-success').click(function () {
-
-                var val = $('input').val().split(" ");
-                var result = 'ERROR';
-                if (val[1] == '÷') {
-                    result = parseInt(val[0]) / parseInt(val[2]);
-                }
-                if (val[1] == '×') {
-                    result = parseInt(val[0]) * parseInt(val[2]);
-                }
-                if (val[1] == '-') {
-                    result = parseInt(val[0]) - parseInt(val[2]);
-                }
-                if (val[1] == '+') {
-                    result = parseInt(val[0]) + parseInt(val[2]);
-                }
-                $('input').val(result);
-                $('input').addClass('needclear');
-
-            })
+            $('#btn-success').click(function () {
+                $('#calc-display').val(eval($('#calc-display').val()));
+            });
         });
     </script>
 </body>
